# tensor-ml

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  _test_dict.py  _test_image.py  _test_output.txt  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: naming-check.yml  publish.yml  python-publish.yml  tests.yml
docs/: api_reference.md  quickstart.ipynb  user_guide.md
docs/examples/: tlars_image_reconstruction.ipynb
src/tensor-ml/tensorops/: _tensor_products.py
src/tensor_ml/: __init__.py  enums.py  exceptions.py  utils.py
src/tensor_ml/tensor_models/: __init__.py  base.py
src/tensor_ml/tensor_models/multilinear/: MultilinearModel.py  __init__.py  multilinear_model.py  tlars.py  tnet.py
src/tensor_ml/tensor_ops/: __init__.py  tensor_ops.py  tensor_products.py  tensor_products_base.py  tensor_products_numpy.py  tensor_products_torch.py
src/tensor_ml/tensorops/: __init__.py  _tensor_products.py  _tensor_products_numpy.py  _tensor_products_torch.py  tensor_ops.py  tensor_products.py  tensor_products_numpy.py  tensor_products_torch.py
tests/: test_error_paths.py  test_tensor_products.py  test_tensor_products_numpy.py  test_tensor_products_torch.py
tests/test_tensor_models/: test_tensor_models.py  test_tlars.py  test_tlars_validation.py  test_tnet.py
tests/test_tensor_ops/: test_tensor_ops.py  test_tensor_products.py  test_tensor_products_numpy.py  test_tensor_products_torch.py
tests/test_tensorops/: test_tensor_ops.py  test_tensor_products.py  test_tensor_products_numpy.py  test_tensor_products_torch.py
