[project]
name = "tensor-ml"
version = "0.2.0"
description = "A library that provides a rich set of tools for tensor analysis, multi-linear algebra, tensor regression and multi-dimensional sparse signal representations."
authors = [{ name = "Ishan Wickramasingha" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["tensor", "multilinear", "sparse", "LARS", "T-LARS", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
torch = ["torch>=1.9.0"]
progress = ["tqdm>=4.60.0"]

[project.urls]
Repository = "https://github.com/IW276/tensor-ml"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0",
    "torch>=1.9.0",
    "tqdm>=4.60.0",
    "matplotlib>=3.5.0",
    "ipykernel>=6.0",
    "scipy>=1.15.3",
    "pywavelets>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["tensor_ml"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
